--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://www.nosotrosciudadanos.cl
 Author: Sofía Zapata Zavala
 Author URI: http://www.szz.cl/
 Description: Tema para la Fundación Nosotros Ciudadanos
-Version: 1.1.3
+Version: 2.0-alpha.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: white, blue, two columns, full width
